Fixed issue with roomList alignment, had to override justify-content

--- a/src/App.css
+++ b/src/App.css
@@ -399,3 +399,8 @@
     display: none;
   }
 }
+
+/* overrides */
+.jss2 {
+  justify-content: flex-start !important;
+}
